--- a/style.css
+++ b/style.css
@@ -33,10 +33,9 @@ body {
     height: 100%;
     flex-grow: 1;
     box-sizing: border-box;
-    background: rgb(0,0,3);
-    background: linear-gradient(90deg, rgba(0,0,3,1) 0%, rgba(0,0,9,1) 21%);
+    background: rgb(255, 255, 255);
 }
 
 .hero > span {
-    color: white;
+    color: rgb(0, 0, 0);
 }
